parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> game
Rule 1     game -> tags moves
Rule 2     tags -> tag
Rule 3     tags -> tag tags
Rule 4     tag -> TITLE
Rule 5     tag -> RESULT
Rule 6     tag -> OPENING
Rule 7     moves -> move
Rule 8     moves -> move moves
Rule 9     move -> MOVE OPENING COMMENT
Rule 10    move -> MOVE OPENING

Terminals, with rules where they appear

COMMENT              : 9
MOVE                 : 9 10
OPENING              : 6 9 10
RESULT               : 5
TITLE                : 4
error                : 

Nonterminals, with rules where they appear

game                 : 0
move                 : 7 8
moves                : 1 8
tag                  : 2 3
tags                 : 1 3

Parsing method: LALR

state 0

    (0) S' -> . game
    (1) game -> . tags moves
    (2) tags -> . tag
    (3) tags -> . tag tags
    (4) tag -> . TITLE
    (5) tag -> . RESULT
    (6) tag -> . OPENING

    TITLE           shift and go to state 4
    RESULT          shift and go to state 5
    OPENING         shift and go to state 6

    game                           shift and go to state 1
    tags                           shift and go to state 2
    tag                            shift and go to state 3

state 1

    (0) S' -> game .



state 2

    (1) game -> tags . moves
    (7) moves -> . move
    (8) moves -> . move moves
    (9) move -> . MOVE OPENING COMMENT
    (10) move -> . MOVE OPENING

    MOVE            shift and go to state 9

    moves                          shift and go to state 7
    move                           shift and go to state 8

state 3

    (2) tags -> tag .
    (3) tags -> tag . tags
    (2) tags -> . tag
    (3) tags -> . tag tags
    (4) tag -> . TITLE
    (5) tag -> . RESULT
    (6) tag -> . OPENING

    MOVE            reduce using rule 2 (tags -> tag .)
    TITLE           shift and go to state 4
    RESULT          shift and go to state 5
    OPENING         shift and go to state 6

    tag                            shift and go to state 3
    tags                           shift and go to state 10

state 4

    (4) tag -> TITLE .

    TITLE           reduce using rule 4 (tag -> TITLE .)
    RESULT          reduce using rule 4 (tag -> TITLE .)
    OPENING         reduce using rule 4 (tag -> TITLE .)
    MOVE            reduce using rule 4 (tag -> TITLE .)


state 5

    (5) tag -> RESULT .

    TITLE           reduce using rule 5 (tag -> RESULT .)
    RESULT          reduce using rule 5 (tag -> RESULT .)
    OPENING         reduce using rule 5 (tag -> RESULT .)
    MOVE            reduce using rule 5 (tag -> RESULT .)


state 6

    (6) tag -> OPENING .

    TITLE           reduce using rule 6 (tag -> OPENING .)
    RESULT          reduce using rule 6 (tag -> OPENING .)
    OPENING         reduce using rule 6 (tag -> OPENING .)
    MOVE            reduce using rule 6 (tag -> OPENING .)


state 7

    (1) game -> tags moves .

    $end            reduce using rule 1 (game -> tags moves .)


state 8

    (7) moves -> move .
    (8) moves -> move . moves
    (7) moves -> . move
    (8) moves -> . move moves
    (9) move -> . MOVE OPENING COMMENT
    (10) move -> . MOVE OPENING

    $end            reduce using rule 7 (moves -> move .)
    MOVE            shift and go to state 9

    move                           shift and go to state 8
    moves                          shift and go to state 11

state 9

    (9) move -> MOVE . OPENING COMMENT
    (10) move -> MOVE . OPENING

    OPENING         shift and go to state 12


state 10

    (3) tags -> tag tags .

    MOVE            reduce using rule 3 (tags -> tag tags .)


state 11

    (8) moves -> move moves .

    $end            reduce using rule 8 (moves -> move moves .)


state 12

    (9) move -> MOVE OPENING . COMMENT
    (10) move -> MOVE OPENING .

    COMMENT         shift and go to state 13
    MOVE            reduce using rule 10 (move -> MOVE OPENING .)
    $end            reduce using rule 10 (move -> MOVE OPENING .)


state 13

    (9) move -> MOVE OPENING COMMENT .

    MOVE            reduce using rule 9 (move -> MOVE OPENING COMMENT .)
    $end            reduce using rule 9 (move -> MOVE OPENING COMMENT .)

